fix, now figure can move