@@ -1,9 +1,9 @@
 package com.telegram.bot.chess.factory;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.springframework.stereotype.Component;
 
@@ -15,24 +15,20 @@ import com.telegram.bot.chess.model.figure.Figure;
 public class GameStatusDTOFactory {
 
     private List<List<Integer>> allFiguresToNumber(List<List<Figure>> field) {
-        return field.stream()
-                    .map(row -> row.stream()
+        return new ArrayList(field.stream()
+                   .map(row -> new ArrayList(row.stream()
                                    .map(figure -> figure != null ? figure.toNumber() : 0)
-                                   .toList())
-                    .collect(Collectors.toList());
-    }
-
-    private void reverseAll(List<List<Integer>> field) {
-        Stream.of(field).forEach(Collections::reverse);
-        Collections.reverse(field);
+                                   .toList()))
+                   .collect(Collectors.toList()));
     }
 
     public GameStatusDTO createGameStatusDTO(Game game, String playerLogin) {
         var field     = allFiguresToNumber(game.getField().getField()); //TODO: исправить это
         var yourColor = 1;
 
-        if (playerLogin.equals(game.getBlackPlayer().getLogin())) {
-            reverseAll(field);
+        if (playerLogin.equals(game.getBlackPlayer().getPlayerId())) {
+            field.forEach(Collections::reverse);
+            Collections.reverse(field);
             yourColor = -1;
         }
 
